# cget-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  package.cmake
.cget/: core.cmake
include/cget/: cmake-utils.h  github-search.h  utilities.h
src/: cmake-utils.cc  config.h  github-search.cc  main-init.cc  main-init.h  main-install.cc  main-install.h  main.cc  utilities.cc
